<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.pillbot.activity.AddMedsActivity" >

    <TextView
        android:id="@+id/label_med_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:text="@string/label_med_name" />

    <EditText
        android:id="@+id/id_med_name"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@id/label_med_name"
        android:layout_toRightOf="@id/label_med_name"
        android:hint="@string/hint_med_name" />

    <TextView
        android:id="@+id/label_med_dose"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/id_med_name"
        android:text="@string/label_med_dose" />

    <EditText
        android:id="@+id/id_med_dose"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/id_med_name"
        android:layout_toEndOf="@id/label_med_dose"
        android:layout_toRightOf="@id/label_med_dose"
        android:hint="@string/hint_med_dose"
        android:inputType="text" />

    <TextView
        android:id="@+id/label_time_taken"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/id_med_dose"
        android:text="@string/label_time_taken" />

    <TimePicker
        android:id="@+id/id_time_taken"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/id_med_dose"
        android:layout_toEndOf="@id/label_time_taken"
        android:layout_toRightOf="@id/label_time_taken"
        android:timePickerMode="spinner" />
 <!-- ^^^^^ THIS LINE WILL BREAK FOR API LVL UNDER 21, IS BUG, TO FIX -->

    <TextView
        android:id="@+id/label_freq_taken"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/id_time_taken"
        android:text="@string/label_freq_taken" />

    <EditText
        android:id="@+id/id_freq_taken_count"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/id_time_taken"
        android:layout_toEndOf="@id/label_freq_taken"
        android:layout_toRightOf="@id/label_freq_taken"
        android:inputType="number"
        android:hint="@string/hint_freq_taken_count" />

    <Spinner
        android:id="@+id/id_freq_taken_units"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/id_time_taken"
        android:layout_toEndOf="@id/id_freq_taken_count"
        android:layout_toRightOf="@id/id_freq_taken_count" />

    <CheckBox
        android:id="@+id/id_as_needed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/id_freq_taken_units"
        android:text="@string/label_as_needed" />

    <Button
        android:id="@+id/save_new_med_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/id_as_needed"
        android:onClick="save"
        android:text="@string/action_save" />

    <Button
        android:id="@+id/cancel_new_med_action_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/save_new_med_button"
        android:onClick="cancel"
        android:text="@string/action_cancel" />

</RelativeLayout>